# stocks_forecasting_live

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  deploy_training_workflow.py  main_inference.py  main_promotion.py  main_training.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
Docker/: Dockerfile  setup.py
config/: Exp_CldrFeats_ModReg.yaml  Exp_CldrFeats_ModReg_test.yaml  gcs.yml
deploy_demo/: demo.py
deploy_inference/: Dockerfile  inference_requirements.txt
documentation/: documentation.md
monitoring/: docker-compose.yml  establish_baseline.py  establish_baseline_data_model.ipynb  evidently_metrics_calculation.py  evidently_report_dashboard.ipynb  refresh_monitoring_dashboard.py  tools.py
monitoring/config/: grafana_datasources.yaml
monitoring/dashboards/: base_monitoring.json  stocks_base_monitoring.json
notebooks/: mlflow_log_pipeline.ipynb  mlflow_test_pipeline.ipynb
scripts/: deploy_training_workflow.py  download_extracted_model_from_cloud.py  extract_mlflow_artifacts.py  gcp_functions.py  load_configs.py  test_inference.py
src/: create_experiments.py  data.py  extract_mlflow_artifacts.py  gcp_functions.py  load_configs.py  mlflow_helpers.py  models.py  preprocessor_model_pipeline.py  raw_data.py  raw_data_kaggle.py  raw_data_yf.py  utils.py
terraform/: main.tf  variables.tf
tests/: test_src_create_experiments.py
